--- a/public/overview/index.html
+++ b/public/overview/index.html
@@ -4,7 +4,7 @@
     
 
 <meta property="og:url" content="http://localhost:1313/overview/">
-  <meta property="og:site_name" content="Hugo Fresh Theme">
+  <meta property="og:site_name" content="Diskurs">
   <meta property="og:title" content="Overview">
   <meta property="og:description" content="Declarative Configuration Diskurs simplifies the setup and management of multi-agent systems with a declarative approach to configuration. Instead of hardcoding system details, everything is centrally defined in a YAML configuration file, offering unparalleled flexibility and ease of use.
 What You Can Configure In the YAML configuration file, you can define:
@@ -17,11 +17,11 @@ LLM settings: Specify the language model to use, including its parameters. Agent
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Hugo Fresh Theme</title>
+    <title>Diskurs</title>
     
   
 <link rel="icon" type="image/png" href="/images/favicon.png" />
-<link href="https://fonts.googleapis.com/css?family=Open&#43;Sans:400,600" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=DM&#43;Mono:400,600" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/css/style.css">
 <link rel="stylesheet" type="text/css" href="/css/icons.css">
 
