--- a/public/index.html
+++ b/public/index.html
@@ -125,28 +125,8 @@
     <div class="tabs is-centered">
       <ul>
         <li>
-          <a  href="https://google.com" >
-            <img class="partner-logo" src="/images/logos/clients/systek.svg">
-          </a>
-        </li>
-        <li>
-          <a  href="https://stefma.github.io/hugo-fresh/" >
-            <img class="partner-logo" src="/images/logos/clients/tribe.svg">
-          </a>
-        </li>
-        <li>
-          <a  href="https://github.com/StefMa/hugo-fresh" >
-            <img class="partner-logo" src="/images/logos/clients/kromo.svg">
-          </a>
-        </li>
-        <li>
-          <a  href="https://hugo-fresh.vercel.app/" >
-            <img class="partner-logo" src="/images/logos/clients/infinite.svg">
-          </a>
-        </li>
-        <li>
-          <a  href="https://bulma.io/" >
-            <img class="partner-logo" src="/images/logos/clients/gutwork.svg">
+          <a  href="https://www.open-systems.com/" >
+            <img class="partner-logo" src="/images/logos/clients/opensystems.svg">
           </a>
         </li>
       </ul>
